Bug 213045 - kldload vesa fails to run: module_register_init: MOD_LOAD (vesa, 0xffffffffxxxxxxxx, 0) error 19
Summary: kldload vesa fails to run: module_register_init: MOD_LOAD (vesa, 0xffffffffxx...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 11.0-STABLE
Hardware: amd64 Any
: --- Affects Some People
Assignee: freebsd-bugs (Nobody)
URL:
Keywords: needs-qa
Depends on:
Blocks:
 
Reported: 2016-09-28 14:11 UTC by Harri
Modified: 2023-01-09 15:55 UTC (History)
17 users (show)

See Also:
koobs: maintainer-feedback? (emaste)
koobs: maintainer-feedback? (ed)


Attachments
dmesg output (9.93 KB, text/plain)
2016-09-28 14:11 UTC, Harri
no flags Details
HP t610 TC boot (8.46 KB, text/plain)
2017-06-11 18:18 UTC, Valery
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harri 2016-09-28 14:11:37 UTC
Created attachment 175228 [details]
dmesg output

"kldload vesa" fails with

module_register_init: MOD_LOAD (vesa, 0xffffffff83477000, 0) error 19
sysctl_unregister_oid: failed to unregister sysctl

"vidcontrol -i mode" doesn't list any videomodes, either.
Comment 1 Harri 2016-11-05 08:44:33 UTC
Is there anything I could try? It would be a shame to use this laptop for anything else but FreeBSD.
Comment 2 Jason W. Bacon freebsd_committer freebsd_triage 2017-03-15 23:25:16 UTC
I'm getting the same error on my Thinkpad T61, and yet vesa mode works fine.  I'm using it due to an apparent regression in the intel driver (bug #217689).

Sleep/resume is not working properly with vesa, though, and I found a suggestion that kldload vesa might fix this.

So what is error 19 for kldload?

From dmesg:

module_register_init: MOD_LOAD (vesa, 0xffffffff81cae000, 0) error 19
Comment 3 Valery 2017-06-11 18:18:07 UTC
Created attachment 183409 [details]
HP t610 TC boot
Comment 4 Valery 2017-06-11 18:24:13 UTC
I have the same problem, running FreeBSD r10.3,r11,12-CURRENT on my HP t610 Thin Client. See attached dmesg output in attachment "HP t610 TC boot".

I can boot only in Safe mode (both from USB flash or from HDD).
But not sure that it's because of vesa error...
Comment 5 Patrick McMunn 2017-08-19 17:48:38 UTC
This issue affects me on 11.1-RELEASE, as well on a Dell Dimension 2400. At the very least, this bug should be upgraded from "Affects Only Me" to "Affects multiple users".
Comment 6 Mateusz Piotrowski freebsd_committer freebsd_triage 2018-06-23 11:15:05 UTC
I'm experiencing it on Dell XPS L702X[1]. 

 * I can log in.
 * I've got "module_register_init: MOD_LOAD (vesa, 0xffffffff810ed680, 0) error 19" in dmesg.
 * I cannot kldload vesa as I get the same errors as Harri [2].

The machine is running 12.0-CURRENT r335317 amd64.

[1]: https://wiki.freebsd.org/Laptops/Dell_XPS_L702X
[2]: https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=213045#c0
Comment 7 patpro 2018-07-08 14:01:58 UTC
Same here on 11.1-RELEASE-p11 running on INTEL DQ77KB motherboard with Intel Core i3-3220T CPU.
Comment 8 Michael Siegel 2018-07-17 10:40:01 UTC
I'm having the same problem on 11.2-STABLE (i386).

This is what pciconf -lv says about my graphics card:
RS200M [Radeon IGP 330M/340M/345M/350M]
Comment 9 Max Kostikov 2018-12-14 19:57:06 UTC
Have the same error with Matrox MGA G200e [Pilot] ServerEngines (SEP1) on 12.0-RELEASE

module_register_init: MOD_LOAD (vesa, 0xffffffff810f9770, 0) error 19
Comment 10 Ftn 2019-03-01 07:50:57 UTC
Have the same error with NVIDIA Corporation GT218 [ION] on 11.2-RELEASE-p9 (amd64) (GENERIC)

kernel: module_register_init: MOD_LOAD (vesa, 0xffffffff80ff4580, 0) error 19
Comment 11 Jason Mours 2019-06-06 13:04:31 UTC
Seeing kldload vesa error 19 with FREEBSD 12.0-RELEASE r341666 GENERIC

module_register_init: MOD_LOAD (vesa, 0xffffffff8059000, 0) error 19
sysctl_unregistered_oid: failed to unregister sysctl

efifb loads

vidcontrol shows no alternative video modes.
Comment 12 Hilko Meyer 2019-08-25 23:18:40 UTC
Have the same problem and found the reason. The new console driver vt(4) is default since 11.0 and the old syscons(4) is retiered. But it lacks VESA support. See https://wiki.freebsd.org/Newcons The last edit of that wiki page was almost a year ago. No idea about the current state.
Comment 13 Ken Gordon 2020-02-16 00:50:43 UTC
I am having the same error message showing up in dmesg. It does not appear to be causing any problems, but it isn't right, and I would like to get it fixed.

The video adapter in this Acer "Aspire One" laptop is an Nvidia clone, and I have activated it correctly and it works just fine.

Can anyone suggest a fix for this error? It will probably require a kernel recompile.

Ken Gordon
Comment 14 Kubilay Kocak freebsd_committer freebsd_triage 2020-08-15 05:56:20 UTC
^Triage: Request feedback from vt authors

If this is due to vt not supporting vesa, and all reports (unverified) are on FreeBSD versions that were using vt, whether as a default (12.x), or user-set (11.x), then can this issue be considered to be:

 - Add support for vesage in vt(4), OR
 - Improve error messaging ("vt doesn't support vesa" or similar)
Comment 15 Pau Amma 2020-08-15 06:23:27 UTC
Adding myself to the list of people seeing this message with no obvious ill effects.

% uname -a
FreeBSD gadfly 12.1-RELEASE-p8 FreeBSD 12.1-RELEASE-p8 GENERIC  amd64

I can't tell how long it's been there, only that I don't remember seeing it until a few hours ago.
Comment 16 Patrick McMunn 2020-08-15 17:25:02 UTC
I wouldn't say there are no ill effects. The reason I was trying to load the vesa module was because I wanted to enable boot splash on my FreeBSD system. So while it may not be causing harm exactly, it prevents some minor functionality.
Comment 17 Ed Maste freebsd_committer freebsd_triage 2021-12-09 18:23:41 UTC
This error is expected when vt(4) is in use and the user attempts to `kldload vesa`. The legacy sc(4) can be selected instead by adding to /boot/loader.conf:

kern.vty=sc

Is this error being observed without any vesa-specific configuration (i.e., without vesa_load=YES in /boot/loader.conf and without vesa in /etc/rc.conf kld_list)?
Comment 18 mikhail.maximov 2022-03-21 06:00:31 UTC
(In reply to Ed Maste from comment #17)

[adm@server ~]$ sudo dmesg | grep -i vesa
module_register_init: MOD_LOAD (vesa, 0xffffffff811848b0, 0) error 19

[adm@server ~]$ sudo grep -i vesa /etc/rc.conf

[adm@server ~]$ sudo grep -i vesa /boot/loader.conf

[adm@server ~]$ uname -a
FreeBSD server.xxxxx 12.3-RELEASE-p3 FreeBSD 12.3-RELEASE-p3 GENERIC  amd64
Comment 19 Ed Maste freebsd_committer freebsd_triage 2022-03-21 14:56:13 UTC
(In reply to mikhail.maximov from comment #18)
Sorry, I mean also without running `kldload vesa`.
Comment 20 commit-hook freebsd_committer freebsd_triage 2022-03-21 15:55:12 UTC
A commit in branch stable/12 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=8518513d2436386bb16dac9f344679c2a9b75634

commit 8518513d2436386bb16dac9f344679c2a9b75634
Author:     Scott Long <scottl@FreeBSD.org>
AuthorDate: 2019-11-13 15:31:31 +0000
Commit:     Ed Maste <emaste@FreeBSD.org>
CommitDate: 2022-03-21 15:54:35 +0000

    Stop the VESA driver from whining loudly in the dmesg during boot on
    systems that use EFI instead of BIOS.

    (cherry picked from commit 2058e7dbde0f030105007f0f34699fdc0d8e3444)

    PR:             213045

 sys/dev/fb/vesa.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
Comment 21 Ed Maste freebsd_committer freebsd_triage 2023-01-09 15:55:30 UTC
Error should not appear as of:

commit 2058e7dbde0f030105007f0f34699fdc0d8e3444
Author: Scott Long <scottl@FreeBSD.org>
Date:   Wed Nov 13 15:31:31 2019 +0000

    Stop the VESA driver from whining loudly in the dmesg during boot on
    systems that use EFI instead of BIOS.

Notes:
    svn path=/head/; revision=354683