Stop the VESA driver from whining loudly in the dmesg during boot on systems that use EFI instead of BIOS.

(cherry picked from commit 2058e7dbde0f030105007f0f34699fdc0d8e3444)

PR:		213045